--- a/package.json
+++ b/package.json
@@ -4,22 +4,77 @@
   "description": "Data Processing for NLM Data",
   "main": "index.js",
   "dependencies": {
+    "accepts": "^1.3.4",
+    "apparatus": "0.0.9",
+    "array-flatten": "^2.1.1",
     "async": "^2.6.0",
     "big-xml": "^1.0.0",
     "big-xml-streamer": "^0.0.5",
+    "body-parser": "^1.18.2",
+    "bson": "^1.0.4",
+    "bytes": "^3.0.0",
     "compute-cosine-similarity": "^1.0.0",
+    "content-disposition": "^0.5.2",
+    "content-type": "^1.0.4",
+    "cookie": "^0.3.1",
+    "cookie-signature": "^1.0.6",
+    "debug": "^3.1.0",
+    "depd": "^1.1.1",
+    "destroy": "^1.0.4",
+    "ee-first": "^1.1.1",
+    "ejs": "^2.5.7",
+    "encodeurl": "^1.0.1",
+    "escape-html": "^1.0.3",
+    "etag": "^1.8.1",
     "express": "^4.16.2",
     "fibers": "^2.0.0",
+    "finalhandler": "^1.1.0",
+    "forwarded": "^0.1.2",
+    "fresh": "^0.5.2",
+    "http-errors": "^1.6.2",
+    "iconv-lite": "^0.4.19",
+    "inherits": "^2.0.3",
+    "ipaddr.js": "^1.5.4",
+    "media-typer": "^0.3.0",
+    "merge-descriptors": "^1.0.1",
+    "methods": "^1.1.2",
+    "mime": "^2.0.3",
+    "mime-db": "^1.32.0",
+    "mime-types": "^2.1.17",
     "mongo-sync": "^2.0.1",
     "mongodb": "^2.2.33",
+    "mongodb-core": "^2.1.17",
     "mongoose": "^4.13.2",
+    "ms": "^2.1.1",
     "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
     "natural": "^0.5.4",
+    "negotiator": "^0.6.1",
+    "on-finished": "^2.3.0",
+    "parseurl": "^1.3.2",
+    "path-to-regexp": "^2.1.0",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
+    "proxy-addr": "^2.0.2",
+    "qs": "^6.5.1",
+    "range-parser": "^1.2.0",
+    "raw-body": "^2.3.2",
+    "require_optional": "^1.0.1",
+    "resolve-from": "^4.0.0",
+    "safe-buffer": "^5.1.1",
+    "semver": "^5.4.1",
+    "send": "^0.16.1",
     "sequelize": "^4.18.0",
-    "stem-porter": "^0.0.1",
+    "serve-static": "^1.13.1",
+    "setprototypeof": "^1.1.0",
+    "statuses": "^1.4.0",
+    "stem-porter": "0.0.1",
+    "sylvester": "0.0.21",
+    "type-is": "^1.6.15",
+    "underscore": "^1.8.3",
+    "unpipe": "^1.0.0",
+    "utils-merge": "^1.0.1",
+    "vary": "^1.1.2",
     "xml-stream": "^0.4.5"
   },
   "devDependencies": {},
