--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "async": "^2.6.0",
     "big-xml": "^1.0.0",
     "big-xml-streamer": "^0.0.5",
+    "bindings": "^1.3.0",
     "body-parser": "^1.18.2",
     "bson": "^1.0.4",
     "bytes": "^3.0.0",
@@ -32,6 +33,7 @@
     "forwarded": "^0.1.2",
     "fresh": "^0.5.2",
     "http-errors": "^1.6.2",
+    "iconv": "^2.3.0",
     "iconv-lite": "^0.4.19",
     "inherits": "^2.0.3",
     "ipaddr.js": "^1.5.4",
@@ -50,6 +52,7 @@
     "mysql2": "^1.4.2",
     "natural": "^0.5.4",
     "negotiator": "^0.6.1",
+    "node-expat": "^2.3.16",
     "on-finished": "^2.3.0",
     "parseurl": "^1.3.2",
     "path-to-regexp": "^2.1.0",
