--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "path-to-regexp": "^2.1.0",
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
+    "plotly": "^1.0.6",
     "proxy-addr": "^2.0.2",
     "qs": "^6.5.1",
     "range-parser": "^1.2.0",
