--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "content-type": "^1.0.4",
     "cookie": "^0.3.1",
     "cookie-signature": "^1.0.6",
+    "core-util-is": "^1.0.2",
     "debug": "^3.1.0",
     "depd": "^1.1.1",
     "destroy": "^1.0.4",
@@ -48,6 +49,7 @@
     "mongodb-core": "^2.1.17",
     "mongoose": "^4.13.2",
     "ms": "^2.1.1",
+    "multer": "^1.3.0",
     "mysql": "^2.15.0",
     "mysql2": "^1.4.2",
     "natural": "^0.5.4",
@@ -59,6 +61,7 @@
     "pg": "^7.3.0",
     "pg-hstore": "^2.3.2",
     "plotly": "^1.0.6",
+    "process-nextick-args": "^2.0.0",
     "proxy-addr": "^2.0.2",
     "qs": "^6.5.1",
     "range-parser": "^1.2.0",
@@ -77,9 +80,11 @@
     "type-is": "^1.6.15",
     "underscore": "^1.8.3",
     "unpipe": "^1.0.0",
+    "util-deprecate": "^1.0.2",
     "utils-merge": "^1.0.1",
     "vary": "^1.1.2",
-    "xml-stream": "^0.4.5"
+    "xml-stream": "^0.4.5",
+    "xtend": "^4.0.1"
   },
   "devDependencies": {},
   "scripts": {
