--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "async": "^2.6.0",
     "big-xml": "^1.0.0",
     "big-xml-streamer": "^0.0.5",
+    "bignumber.js": "^5.0.0",
     "bindings": "^1.3.0",
     "body-parser": "^1.18.2",
     "bson": "^1.0.4",
@@ -38,6 +39,7 @@
     "iconv-lite": "^0.4.19",
     "inherits": "^2.0.3",
     "ipaddr.js": "^1.5.4",
+    "isarray": "^2.0.2",
     "media-typer": "^0.3.0",
     "merge-descriptors": "^1.0.1",
     "methods": "^1.1.2",
@@ -55,6 +57,7 @@
     "natural": "^0.5.4",
     "negotiator": "^0.6.1",
     "node-expat": "^2.3.16",
+    "node-mysql": "^0.4.2",
     "on-finished": "^2.3.0",
     "parseurl": "^1.3.2",
     "path-to-regexp": "^2.1.0",
@@ -74,6 +77,7 @@
     "sequelize": "^4.18.0",
     "serve-static": "^1.13.1",
     "setprototypeof": "^1.1.0",
+    "sqlstring": "^2.3.0",
     "statuses": "^1.4.0",
     "stem-porter": "0.0.1",
     "sylvester": "0.0.21",
